# AI-kernel

./: .eslintignore  .eslintrc.js  .gitignore  .prettierignore  CHANGELOG.md  MANIFEST.in  README.md  RELEASE.md  install.json  jupyterlab_examples_prompts-0.1.0-py3-none-any.whl  jupyterlite-prompts-3.2.1.tgz  jupyterlite-prompts-3.3.0.tgz  jupyterlite-prompts-3.3.1.tgz  jupyterlite-prompts-3.3.10.tgz  jupyterlite-prompts-3.3.11.tgz  jupyterlite-prompts-3.3.12.tgz  jupyterlite-prompts-3.3.13.tgz  jupyterlite-prompts-3.3.18.tgz  jupyterlite-prompts-3.3.19.tgz  jupyterlite-prompts-3.3.2.tgz  jupyterlite-prompts-3.3.21.tgz  jupyterlite-prompts-3.3.22.tgz  jupyterlite-prompts-3.3.23.tgz  jupyterlite-prompts-3.3.24.tgz  jupyterlite-prompts-3.3.26.tgz  jupyterlite-prompts-3.3.3.tgz  jupyterlite-prompts-3.3.32.tgz  jupyterlite-prompts-3.3.38.tgz  jupyterlite-prompts-3.3.4.tgz  jupyterlite-prompts-3.3.8.tgz  jupyterlite-prompts-3.3.9.tgz  jupyterlite_prompts-3.3.10-py3-none-any.whl  jupyterlite_prompts-3.3.11-py3-none-any.whl  jupyterlite_prompts-3.3.12-py3-none-any.whl  jupyterlite_prompts-3.3.13-py3-none-any.whl  jupyterlite_prompts-3.3.18-py3-none-any.whl  jupyterlite_prompts-3.3.19-py3-none-any.whl  jupyterlite_prompts-3.3.21-py3-none-any.whl  jupyterlite_prompts-3.3.22-py3-none-any.whl  jupyterlite_prompts-3.3.23-py3-none-any.whl  (+18 more)
.github/: tsconfigbase.json
Test/: AzureStream.js  openaistream.js  streamtest.js
binder/: environment.yml  postBuild
src/: AIKernel.ts  ChatGPTQuery.tsx  ChatGPTQueryBuilder.tsx  IOMessage.ts  chatSyntax.ts  codeActions.ts  comlink.worker.ts  (+14 more)
(+10 files in other folders)
